# react-personal-website

./: .gitignore  README.md  pyproject.toml
backend/backend/: settings.py  urls.py
backend/personalProject/: admin.py  models.py  serializers.py  views.py
backend/personalProject/migrations/: 0001_initial.py
frontend/: package-lock.json
personalWebsite/backend/: secrets.env  settings.py  urls.py
personalWebsite/frontend/: apps.py  models.py  package-lock.json  package.json  urls.py  views.py
personalWebsite/frontend/src/components/: About.js  App.js  Contact.js  Header.js  Home.js  Resume.js  UnderConstruction.js  Work.js
personalWebsite/frontend/static/css/: index.css
personalWebsite/frontend/static/frontend/: main.js  main.js.LICENSE.txt
personalWebsite/frontend/templates/frontend/: index.html
