[tool.poetry]
name = "new website"
version = "0.1.0"
description = ""
authors = ["Michael Larson"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.19.2"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
